--- a/index.html
+++ b/index.html
@@ -11,7 +11,20 @@
 <body>
     <div class="wrapper">
 
-        
+        <header>
+            <a href="#" ><img src="images/logo.svg" alt="Fauxica Logo"> </a>
+            
+            <nav>
+                <ul>
+<li><a href = "#" class="active">Home</a></li>
+<li><a href = "#">Products</a></li>
+<li><a href = "#">Gallery</a></li>
+<li><a href = "#">Locate US</a></li>
+
+                </ul>
+            </nav>
+        </header>
+
     </div>
 </body>
 </html>
