--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -25,6 +29,83 @@
             </nav>
         </header>
 
+        <main>
+<div class="left-col">
+<h1>
+    Quality apparel <br />without the price tag.
+</h1>
+<p>
+    No need to spend $xxx on apparel just for the name's sake.<br />
+    Our premium apparel is made from the same stuff.
+</p>
+
+<div class="cta-btns">
+<a href="#" class="primary-cta">Browse our collection</a>
+
+<a href="#" class="secondary-cta">
+
+    <span>
+        Spring '23 collection
+    </span>
+    <svg xmlns="http://www.w3.org/2000/svg">
+        <path d="M7 7h8.586L5.293 17.293l1.414 1.414L17 8.414V17h2V5H7v2z"/>
+    </svg>
+
+</a>
+
+</div>
+
+<div class="news-sect">
+
+<p class="num-employees">
+    50K
+</p>
+<p class="info-employees">
+    We're proud to announce that we now employ a workforce of over 50,000<br />
+    It's all possible because of you.
+</p>
+
+
+</div>
+
+</div>
+
+<div class="right-col">
+
+
+    <div class="card card1">
+
+        <div class="class-details">
+            <div>
+                <a href="#" class="product-title">Fauxica Sport</a>
+                <p>Running shoes</p>
+            </div>
+            <p class="product-price">$50</p>
+        </div>
+    </div>
+    <div class="card card2">
+
+        <div class="class-details">
+            <div>
+                <a href="#" class="product-title">Nike Air</a>
+                <p>Walking shoes</p>
+            </div>
+            <p class="product-price">$30</p>
+        </div>
+    </div>
+    <div class="card card3">
+
+        <div class="class-details">
+            <div>
+                <a href="#" class="product-title">Air 270></a>
+                <p>Gym shoes</p>
+            </div>
+            <p class="product-price">$20</p>
+        </div>
+    </div>
+</div>
+
+        </main>
     </div>
 </body>
 </html>
