--- a/index.html
+++ b/index.html
@@ -25,6 +25,19 @@
             </nav>
         </header>
 
+        <main>
+
+            <div class="left-col">
+
+
+            </div>
+
+            <div class="right-col">
+
+                
+            </div>
+        </main>
+
     </div>
 </body>
 </html>
