--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+
+    <div class="overlay"></div>
     <div class="wrapper">
 
         <header>
@@ -34,7 +36,7 @@
 <h1>
     Quality apparel <br />without the price tag.
 </h1>
-<p>
+<p class = "subhead">
     No need to spend $xxx on apparel just for the name's sake.<br />
     Our premium apparel is made from the same stuff.
 </p>
@@ -75,7 +77,7 @@
 
     <div class="card card1">
 
-        <div class="class-details">
+        <div class="card-details">
             <div>
                 <a href="#" class="product-title">Fauxica Sport</a>
                 <p>Running shoes</p>
@@ -85,7 +87,7 @@
     </div>
     <div class="card card2">
 
-        <div class="class-details">
+        <div class="card-details">
             <div>
                 <a href="#" class="product-title">Nike Air</a>
                 <p>Walking shoes</p>
@@ -95,9 +97,9 @@
     </div>
     <div class="card card3">
 
-        <div class="class-details">
+        <div class="card-details">
             <div>
-                <a href="#" class="product-title">Air 270></a>
+                <a href="#" class="product-title">Air 270</a>
                 <p>Gym shoes</p>
             </div>
             <p class="product-price">$20</p>
